# kuehandkopi

./: .env.example  .gitignore  .vercelignore  README.md  main.py  pyproject.toml  vercel.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  seed.py  tokens.py
data/media/3d/ingredients/: ATTRIBUTION.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/mango_drinks/: manifest.json
frontend/src/: App.tsx  ClaimForm.tsx  MangoHero.tsx  MangoThemeBackground.tsx  MemoryGame.tsx  api.ts  campaignDates.ts  config.ts  gsap.d.ts  index.css  loadDrinks.ts  main.tsx  theme.css  types.ts
